# ledgr

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  justfile
.claude-sessions/: session-2026-07-19T21-03-37+0100.md
doc/adr/: 0001-record-architecture-decisions.md  0002-use-ofx-for-barclays-statement-import.md  0003-single-crate-package-ledgr.md  0004-xdg-conventions-for-local-files.md  0005-independent-spend-and-income-ledgers.md  0006-no-account-type-gate-on-spend-derivation.md  0007-assets-and-liabilities-as-accounts-with-balance-snapshots.md  0008-reference-household-accounts.md  0009-persisted-ledgers-built-at-import.md  decisions.md
doc/developer-docs/: ofx-format.md  transfer-detection.md  tui-manual-testing.md
doc/domain/: household.md  ubiquitous-language.md
doc/implementation-notes/: income-vs-refund-classification-proposal.md  optimising-import-data.md  spend-ledger-design.md  transfer-ledger-critique.md  transfer-ledger-design.md  transfer-ledger-history.md
doc/kb/: enable-banking-registration.md
doc/kb/barclaycard/: pdf-export-structure.md
doc/kb/ofx/: structure.md
doc/kb/rebel-finance/: research.md
doc/planning/: plan.md
doc/planning/archive/: 2026-07-17-2242-archive.md  2026-07-17-2248-archive.md  2026-07-17-2251-archive.md  index.md
doc/user-guide/: spend-analysis.md  transfer-detection.md
examples/: backfill_trn_type.rs  debug_trntype.rs
ledgr-core/: Cargo.toml
ledgr-core/src/: analysis.rs  lib.rs
ledgr-core/src/db/: accounts.rs  mod.rs  schema.sql  transactions.rs
ledgr-core/src/import/: generic_csv.rs
ledgr-tui/: Cargo.toml
ledgr-tui/src/: app.rs  main.rs  ui.rs
src/: analysis.rs  app.rs  config.rs  derive.rs  inbox.rs  main.rs  model.rs  ui.rs
src/db/: accounts.rs  balances.rs  cards.rs  gap.rs  imports.rs  income.rs  mod.rs  schema.sql  spend.rs  statements.rs  status.rs  transactions.rs
src/import/: barclaycard_pdf.rs  barclays_ofx.rs  generic_csv.rs  mod.rs  pipeline.rs
