[package]
name = "ledgr"
version = "0.1.0"
edition = "2021"
authors = ["Jim Barritt"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ubiqtek/ledgr"
description = "A TUI personal finance app: import bank/pension statements, build a local database, and analyze your finances."
keywords = ["finance", "tui", "cli", "budget", "accounting"]
categories = ["command-line-utilities", "finance"]

[[bin]]
name = "ledgr"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
thiserror = "1"
csv = "1"
ratatui = "0.28"
crossterm = "0.28"
directories = "5"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
